[gd_scene load_steps=4 format=3 uid="uid://jbxda08y72ab"]

[ext_resource type="Script" path="res://scripts/letterspawner.gd" id="1_3pfyi"]
[ext_resource type="AudioStream" uid="uid://4wxyjr51070n" path="res://src/som/Ice-Cream-Truck-Races_Looping.mp3" id="2_lrvmp"]

[sub_resource type="Curve2D" id="Curve2D_xus82"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 19, -66, 0, 0, 0, 0, 428, -67)
}
point_count = 2

[node name="letterspawner" type="Path2D"]
curve = SubResource("Curve2D_xus82")
script = ExtResource("1_3pfyi")

[node name="musica" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_lrvmp")

[node name="caminho" type="PathFollow2D" parent="."]
position = Vector2(19, -66)
rotation = -0.00244498

[node name="TimerSpaw" type="Timer" parent="."]
wait_time = 5.0

[node name="TimerLevel" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[connection signal="finished" from="musica" to="." method="_on_musica_finished"]
[connection signal="timeout" from="TimerSpaw" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="TimerLevel" to="." method="_on_timer_level_timeout"]
